--- a/WebContent/veiw/index.html
+++ b/WebContent/veiw/index.html
@@ -29,10 +29,10 @@
 </head>
 <body>
 	<form action="loginck.jsp" method="post" name="login">
-		아이디 : <input type="text" name="userID"></input> 
-		비밀번호 : <input type="password" name="userPW"></input> 
+		아이디 : <input type="text" name="userID">
+		비밀번호 : <input type="password" name="userPW">
 		<input type="reset"></input> 
-		<input	type="button" onclick="loginck()" value="로그인"></input>
+		<input	type="button" onclick="loginck()" value="로그인">
 	</form>
 </body>
 </html>
